k8s/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bulletin-svc
  namespace: bulletin
spec:
  selector:
    app: bulletin-app
  ports:
    - port: 80
      targetPort: 8080
